--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ slog = "2.5"
 slog-stdlog = "4.0"
 slog-scope = "4.3.0"
 num_cpus = "1.13.0"
+async-trait = "0.1.33"
 
 [dev-dependencies]
 riker-testkit = "0.1.0"
